--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
             Minha página
         </title>
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="style/css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
         <body>            
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">   
-                    <img src="img/logo.png">                
+                    <img src="img/digitalone.png" widht=150 height="100">                
                 </a>
-                <div class="collapse navbar-collapse"">
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Quem somos</a>
@@ -28,6 +28,11 @@
                     </ul>
                 </div>
             </nav>
+            <section id="quemsomos">
+                <div class="container-fluid quem-somos text-center margin">
+                    <p>Teste</p>
+                </div>
+            </section>
         </body>
         
 
