--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Quem somos</a>
+                            <a class="nav-link" href="#quemsomos">Quem somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Parceiros</a>
@@ -29,8 +29,10 @@
                 </div>
             </nav>
             <section id="quemsomos">
-                <div class="container-fluid quem-somos text-center margin">
-                    <p>Teste</p>
+                <div class="container-fluid quem-somos text-center">
+                    <h3>Quem somos</h3>
+                    <img src="img/time.jpeg" class="rounded-circle" width= 200 height=200>
+                    <h3>Somos um time comprometido com os resultados</h3>
                 </div>
             </section>
         </body>
