--- a/index.html
+++ b/index.html
@@ -29,12 +29,30 @@
                 </div>
             </nav>
             <section id="quemsomos">
-                <div class="container-fluid quem-somos text-center">
+                <div class="container-fluid text-center quem-somos margin">                
                     <h3>Quem somos</h3>
-                    <img src="img/time.jpeg" class="rounded-circle" width= 200 height=200>
-                    <h3>Somos um time comprometido com os resultados</h3>
+                    <img src="img/time.jpeg" class="rounded-circle" width="200" height="200">
+                    <h2>Somos um time comprometido com os resultados</h2>
                 </div>
             </section>
+            <section id="parceiros">           
+                <div class="container-fluid text-center margin parceiros">
+                        <h3>Parceiros</h3>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <img src="img/facebook.png" class="rounded-circle" width="100">                                        
+                                    </div>
+                                    <div class="col-lg-4">                                                
+                                        <img src="img/linkedin.png" class="rounded-circle" width="100">
+                                    </div>
+                                    <div class="col-lg-4">                                            
+                                        <img src="img/twitter.png" class="rounded-circle" width="100">
+                                    </div>                                          
+                                </div>
+                            </div>        
+                </div>
+            </section>            
         </body>
         
 
