--- a/index.html
+++ b/index.html
@@ -20,40 +20,59 @@
                             <a class="nav-link" href="#quemsomos">Quem somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Parceiros</a>
+                            <a class="nav-link" href="#parceiros">Parceiros</a>
                         </li>  
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                            <a class="nav-link" href="#servicos">Serviços</a>
                         </li>                                                
                     </ul>
                 </div>
             </nav>
             <section id="quemsomos">
                 <div class="container-fluid text-center quem-somos margin">                
-                    <h3>Quem somos</h3>
-                    <img src="img/time.jpeg" class="rounded-circle" width="200" height="200">
-                    <h2>Somos um time comprometido com os resultados</h2>
+                    <h2>Quem somos</h2>
+                    <img class="margin" src="img/time.jpeg" width="400">
+                    <p>Somos um time comprometido com os resultados</p>
                 </div>
             </section>
             <section id="parceiros">           
                 <div class="container-fluid text-center margin parceiros">
-                        <h3>Parceiros</h3>
+                        <h2>Parceiros</h2>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-4">
-                                        <img src="img/facebook.png" class="rounded-circle" width="100">                                        
+                                        <img class="margin rounded-circle" src="img/facebook.png" width="100">                                        
                                     </div>
                                     <div class="col-lg-4">                                                
-                                        <img src="img/linkedin.png" class="rounded-circle" width="100">
+                                        <img class="margin rounded-circle" src="img/linkedin.png" width="100">
                                     </div>
                                     <div class="col-lg-4">                                            
-                                        <img src="img/twitter.png" class="rounded-circle" width="100">
+                                        <img class="margin rounded-circle" src="img/twitter.png" width="100">
                                     </div>                                          
                                 </div>
                             </div>        
                 </div>
             </section>            
         </body>
-        
+        <section id="servicos">
+            <div class="container-fluid text-center servicos margin">                
+                <h2>Serviços</h2>
+                    <div class="container">                        
+                        <div class="row">
+                            <div class="col-lg-6">
+                                 <img class="margin" src="img/callcenter.png"  width="300" height="300">                                        
+                                 <p> Conte conosco para atender de forma prestativa os clientes</p>                                 
+                            </div>
+                            <div class="col-lg-6"> 
+                                <img  class="margin" src="img/chatbot.jpeg" width="300" height="300">
+                                <p> Estamos preparados para atender seus clientes em qualquer canal</p>                                               
+                            </div>
+                        </div>
+                    </div>        
+            </div>
+        </section>        
+        <footer class="container-fluid text-center margin bg-footer">
+            <p>Desenvolvido por fernanda</p>
+        </footer>
 
 </html>
